Refactor: Limpiar codigo de perfil.component para manejar el editar las referencias familiares aparte

--- a/src/app/modules/empleado/pages/perfil/perfil.component.html
+++ b/src/app/modules/empleado/pages/perfil/perfil.component.html
@@ -90,8 +90,7 @@
     </p-fieldset>
 
     <!-- Referencias Familiares -->
-    <app-referencias-familiares [referencias]="empleado.ReferenciaFamiliar" [isEditMode]="isEditMode"
-      (referenciaAgregada)="onReferenciaAgregada($event)"
-      (referenciaEliminada)="onReferenciaEliminada($event)"></app-referencias-familiares>
+    <app-referencias-familiares [referencias]="empleado.ReferenciaFamiliar"
+      (referenciasActualizadas)="empleado.ReferenciaFamiliar = $event"></app-referencias-familiares>
   </p-card>
 </div>
