Visualización de quién participo en las actividades de empresa

--- a/src/app/modules/recursos-humanos/pages/asignar-actividad/asignar-actividad.component.html
+++ b/src/app/modules/recursos-humanos/pages/asignar-actividad/asignar-actividad.component.html
@@ -40,15 +40,16 @@
       <ng-template pTemplate="body" let-emp>
         <tr>
           <td>
-            <ng-container *ngFor="let actividad of emp.ActividadEmpresa">
-              {{ actividad.NombreActividad }}
-              
-            </ng-container>
+            {{ actividadSeleccionada }}
           </td>
           <td>{{ emp.Nombre }}</td>
           <td>
-            <p-checkbox [(ngModel)]="emp.participacion" [disabled]="!edicionHabilitada" binary="true" (ngModelChange)="actualizarParticipacion(emp)" ></p-checkbox>
-          </td>
+            <p-checkbox 
+  [ngModel]="getParticipacion(emp)" 
+  (ngModelChange)="setParticipacion(emp, $event)" 
+  [disabled]="!edicionHabilitada" 
+  binary="true">
+</p-checkbox></td>
         </tr>
       </ng-template>
     </p-table>
